--- a/index.html
+++ b/index.html
@@ -1864,7 +1864,7 @@
         ];
         
         const epiRoutineFiles = [
-            { name: 'epi_data_2021.xlsx', size: '856 KB', type: 'excel', icon: '📊', path: '/data/epi/epi_data_2021.xlsx', content: 'Excel file with comprehensive epidemiological data at district and chiefdom level including case counts and demographics.' }
+            { name: 'Western_Area_Rural_District_2015-2023.xls', size: '856 KB', type: 'excel', icon: '📊', path: 'Routine Data/Western_Area_Rural_District_2015-2023 (1).xls', content: 'Excel file with comprehensive epidemiological data at district and chiefdom level including case counts and demographics.' }
         ];
         
         const interventionFiles = [
