--- a/index.html
+++ b/index.html
@@ -1863,9 +1863,18 @@
             }
         ];
         
+
         const epiRoutineFiles = [
-            { name: 'Western_Area_Rural_District_2015-2023.xls', size: '856 KB', type: 'excel', icon: '📊', path: 'Routine Data/Western_Area_Rural_District_2015-2023 (1).xls', content: 'Excel file with comprehensive epidemiological data at district and chiefdom level including case counts and demographics.' }
-        ];
+    { 
+        name: 'Western_Area_Rural_District_2015-2023.xls', 
+        size: '856 KB', 
+        type: 'excel', 
+        icon: '📊', 
+        path: 'Routine Data/Western_Area_Rural_District_2015-2023 (1).xls',
+        url: 'https://raw.githubusercontent.com/yourusername/yourrepo/main/data/Western_Area_Rural_District_2015-2023.xls',
+        content: 'Excel file with comprehensive epidemiological data...' 
+    }
+];
         
         const interventionFiles = [
             { name: 'intervention_2021.xlsx', size: '512 KB', type: 'excel', icon: '📊', path: '/data/intervention/intervention_2021.xlsx', content: 'Intervention coverage data for 2021 including vaccination rates and treatment coverage statistics.' }
