--- a/index.html
+++ b/index.html
@@ -1870,8 +1870,8 @@
         size: '856 KB', 
         type: 'excel', 
         icon: '📊', 
-        path: 'Routine Data/Western_Area_Rural_District_2015-2023 (1).xls',
-        url: 'https://raw.githubusercontent.com/yourusername/yourrepo/main/data/Western_Area_Rural_District_2015-2023.xls',
+        path: 'Routine Data/Western_Area_Rural_District_2015-2023.xls',
+        url: 'https://github.com/mohamedsillahkanu/student-training/raw/e140956df7cf48bd23a3f75d77ccb8fad69908f3/Routine%20Data/Western_Area_Rural_District_2015-2023%20(1).xls',
         content: 'Excel file with comprehensive epidemiological data...' 
     }
 ];
