--- a/index.html
+++ b/index.html
@@ -1982,7 +1982,7 @@
             
             // Define your URL mappings here
             const fileUrls = {
-                'file1': 'https://mohamedsillahkanu.github.io/combine-files/?embed=true',
+                'file1': 'https://mohamedsillahkanu.github.io/sbd-coordinates/?embed=true',
                 'file2': 'https://mohamedsillahkanu.github.io/create-new-variables/?embed=true', 
                 'file3': 'https://mohamedsillahkanu.github.io/rename-variables/?embed=true',
                 'file4': 'https://mohamedsillahkanu.github.io/heatmap/?embed=true',
