--- a/index.html
+++ b/index.html
@@ -1988,7 +1988,7 @@
                 'file4': 'https://mohamedsillahkanu.github.io/heatmap/?embed=true',
                 'file5': 'https://mohamedsillahkanu.github.io/reporting-rate/?embed=true',
                 'file6': 'https://mohamedsillahkanu.github.io/fuzzy-name-matching/?embed=true',
-                'file7': 'https://your-url-for-file7.com',
+                'file7': 'https://mohamedsillahkanu.github.io/combine-files/?embed=true',
                 'file8': 'https://your-url-for-file8.com',
                 'file9': 'https://your-url-for-file9.com',
                 'file10': 'https://your-url-for-file10.com',
